--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -10,7 +10,18 @@
 <link rel="icon" href="images/icon.png">
 </head>
 <body>
-<header></header>
+<header>
+  <div class="logo-container">
+    <svg width="0" height="0">
+      <defs>
+        <clipPath id="logoClip">
+          <circle cx="35" cy="35" r="35"></circle>
+        </clipPath>
+      </defs>
+    </svg>
+    <div class="logo" style="background-image: url('images/icon.png');"></div>
+  </div>
+</header>
 <footer>Holberton School</footer>
 </body>
 </html>
